Fix image squishing on mobile

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -684,6 +684,5 @@ table.wiki-content-table tr {
 
 	.scp-image-block img[style*="width:"] {
 		width: 100% !important;
-		height: 100% !important;
 	}
 }
